Enhance git diffs per https://tekin.co.uk/2020/10/better-git-diff-output-for-ruby-python-elixir-and-more - thanks to https://twitter.com/tenderlove/status/1318330504639176705

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
   ui = auto
 [core]
   excludesfile = ~/.gitignore_global
+  attributesfile = ~/.gitattributes
 [difftool "sourcetree"]
   cmd = /Applications/DeltaWalker.app/Contents/MacOS/git-diff \"$LOCAL\" \"$REMOTE\"
   path =
