--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,16 +5,39 @@ bind r source-file ~/.tmux.conf \; display "Reloaded tmux config"
 # Set the delay between prefix and command
 set -s escape-time 1
 
+# Copy: y in copy mode sends the selection to the system clipboard
+# NOTE: if macOS use pbcopy, else xclip for Linux.
+if-shell "uname | grep -q Darwin" \
+    "bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy'" \
+    "bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -selection clipboard'"
+
+set -g history-limit 10000
+
 # Display #######################################
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "tmux-256color"
 
 # Pane border style: single, double, heavy, simple, number.
-set -w -g pane-border-style double
+set -w -g pane-border-lines single
 
 # Add indicators for active and inactive panes
 set -g pane-border-indicators arrows
+
+# Active pane normal, inactive pan dim.
+set -g window-style bg=color235
+set -g window-active-style bg=black
+
+# Status bar ####################################
+
+set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" #[fg=color22]%d-%b %H:%M"
+
+# Active window
+set -g window-status-current-style bg=color10
+
+# Enable activity alerts
+set -w -g monitor-activity on
+set -w -g visual-activity on
 
 # Navigation ####################################
 
