tmux: make copy mode more vim-like

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,16 @@ bind r source-file ~/.tmux.conf \; display "Reloaded tmux config"
 # Set the delay between prefix and command
 set -s escape-time 1
 
+# Buffer ########################################
+
+# Enable vi mode for copy mode
+set -w -g mode-keys vi
+
+bind -T copy-mode-vi v send-keys -X begin-selection # Start selection with v
+
+unbind p
+bind p paste-buffer # Paste buffer with p
+
 # Copy: y in copy mode sends the selection to the system clipboard
 # NOTE: if macOS use pbcopy, else xclip for Linux.
 if-shell "uname | grep -q Darwin" \
