[tmux] Pass through focus in/out events so neovim can reload files (via autoread) when I switch windows.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,9 @@ set -g history-limit 10000
 # Set the default terminal mode to 256color mode
 set -g default-terminal "tmux-256color"
 
+# Pass through focus in/out events (e.g. allows for neovim autoread, etc.)
+set-option -g focus-events on
+
 # Pane border style: single, double, heavy, simple, number.
 set -w -g pane-border-lines single
 
