--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,3 +73,12 @@ bind -r H resize-pane -L 5 # Resize left
 bind -r J resize-pane -D 5 # Resize down
 bind -r K resize-pane -U 5 # Resize up
 bind -r L resize-pane -R 5 # Resize right
+
+# Use TPM (Tmux Plugin Manager): https://github.com/tmux-plugins/tpm
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
