--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config"
 
-# set -g mouse on
+set -g mouse on
 
 # Set the delay between prefix and command
 set -s escape-time 1
@@ -31,22 +31,7 @@ set -g default-terminal "tmux-256color"
 # Pass through focus in/out events (e.g. allows for neovim autoread, etc.)
 set-option -g focus-events on
 
-# Pane border style: single, double, heavy, simple, number.
-set -w -g pane-border-lines single
-
-# Add indicators for active and inactive panes
-set -g pane-border-indicators arrows
-
-# Active pane normal, inactive pan dim.
-set -g window-style bg=color235
-set -g window-active-style bg=black
-
 # Status bar ####################################
-
-set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" #[fg=color22]%d-%b %H:%M"
-
-# Active window
-set -g window-status-current-style bg=color10
 
 # Enable activity alerts
 set -w -g monitor-activity on
@@ -78,7 +63,19 @@ bind -r L resize-pane -R 5 # Resize right
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# catppuccin/tmux settings
+set -g @catppuccin_flavour "mocha" # latte, frappe, macchiato, mocha
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #W" # window name
+set -g @catppuccin_window_current_text " #W" # window name
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
