[claude] Basic configuration - statusline via ccstatusline (nicer than my simple statusline.sh riffed from the docs) - update .stow-local-ignore (and README.md) for Claude files - `brew uninstall proctools` as workaround for https://github.com/anthropics/claude-code/issues/3989   EAGAIN: resource temporarily unavailable, posix_spawn '/opt/homebrew/bin/pgrep' - failed to override in ~/.claude/settings.json with env."PATH": "/usr/bin:/bin:$PATH"

--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -1,8 +1,13 @@
-# Comments and blank lines are allowed
+# Stow ignore
+#
+# For one-off ignores not included here use:
+#   stow --no --verbose=2 --ignore=".gitconfig|.DS_Store" .
 
-.+\.md
+^/[^/]+\.md  # Ignore top-level *.md files (but not subdirectories)
 
-# Defaults from GNU Stow
+.+.local\.json  # Ignore *.local.json files (personal, machine-specific)
+
+# Defaults from GNU Stow:
 # https://www.gnu.org/software/stow/manual/html_node/Types-And-Syntax-Of-Ignore-Lists.html
 
 RCS
