[tmux] Auto-installs TPM and plugins on first launch. No manual setup needed on new machines.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,10 @@ bind -r L resize-pane -R 5 # Resize right
 
 # Use TPM (Tmux Plugin Manager): https://github.com/tmux-plugins/tpm
 
+# Auto-install TPM if not present
+if-shell "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
