[tmux] Fix TPM auto-install to prompt for plugin install instead - install_plugins alone doesn't seem to be sufficient, so now we'll just echo to give a hint when doing an initial setup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,7 +63,7 @@ bind -r L resize-pane -R 5 # Resize right
 
 # Auto-install TPM if not present
 if-shell "test ! -d ~/.tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && tmux display-message \"TPM installed. Press prefix + I to install plugins\"'"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -82,4 +82,5 @@ set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Note: After first launch with TPM cloned, run `prefix + I` to install plugins
 run '~/.tmux/plugins/tpm/tpm'
