--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,6 +1,6 @@
 [settings]
 auto_install = true
-idiomatic_version_file_enable_tools = ["ruby", "node"]
+idiomatic_version_file_enable_tools = ["node"]
 
 [tools]
 node = "lts"
