[git] Use delta "zenburn" theme. Also apply to lazygit, requiring explicitly setting XDG_CONFIG_HOME to respect ~/.config.

--- a/.config/git/config
+++ b/.config/git/config
@@ -64,6 +64,7 @@
 [delta]
   navigate = true  # use n and N to move between diff sections
   line-numbers = true
+  syntax-theme = zenburn
 [merge]
   conflictStyle = zdiff3
 
