[ssh] Remove old keychain opts; 1Password handles key management

--- a/.ssh/config
+++ b/.ssh/config
@@ -5,7 +5,7 @@
 Include config.local
 
 # Local .test VMs
-# (ephemeral, accessed via host-only networking)
+# (ephemeral, accessed via host-only networking, so lower security OK)
 Host *.test
   StrictHostKeyChecking no
   ForwardAgent yes
@@ -14,9 +14,6 @@ Host *.test
 Host *
   # 1Password SSH agent
   IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
-  UseKeychain yes
-  AddKeysToAgent yes
-  IdentityFile ~/.ssh/id_rsa
 
   # Connection multiplexing (reuse connections for speed. faster Ansible/Capistrano)
   ControlMaster auto
