[ghostty] redundant config for remote host compat
- had an issue with an Ubuntu 22.04 LTS host. Perhaps because local host
had reverted to macOS system Bash, but saying it twice won't hurt until
all hosts are >= 24.04.

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,6 +1,9 @@
 # Ghostty Config
 # https://ghostty.org/docs/config/reference
 
+# Use compatible TERM for remote hosts lacking xterm-ghostty terminfo
+term = xterm-256color
+
 # Set sudo wrapper to preserve terminfo.
 # Enable SSH environment variable compatibility.
 shell-integration-features = sudo,ssh-env
