[tmux,bash] Adopt more settings from omarchy
Alt+1-9 window switching, renumber-windows, OSC 52 clipboard, truecolor,
kill-pane without confirm, session name on left.

Add tml() tmux layout function (editor + ai + terminal).
Add `t` tmux attach alias with default "Work" window.

Inspired by: https://x.com/dhh/status/2023745624655405134
-
https://github.com/basecamp/omarchy/blob/6cb036d/config/tmux/tmux.conf#L34
-
https://github.com/basecamp/omarchy/blob/6cb036d/default/bash/functions#L131

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,24 +9,21 @@ set -s escape-time 1
 
 # Enable vi mode for copy mode
 set -w -g mode-keys vi
-
 bind -T copy-mode-vi v send-keys -X begin-selection # Start selection with v
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel # Copy selection with y
 
 unbind p
 bind p paste-buffer # Paste buffer with p
 
-# Copy: y in copy mode sends the selection to the system clipboard
-# NOTE: if macOS use pbcopy, else xclip for Linux.
-if-shell "uname | grep -q Darwin" \
-    "bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy'" \
-    "bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -selection clipboard'"
 
 set -g history-limit 10000
+set -g set-clipboard on # copy selections to system clipboard via OSC 52
 
 # Display #######################################
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",*:RGB" # enable truecolor for outer terminal
 
 # Pass through focus in/out events (e.g. allows for neovim autoread, etc.)
 set-option -g focus-events on
@@ -42,6 +39,9 @@ set -w -g visual-activity on
 # Set the base index for windows and panes to 1 (default 0)
 set -g base-index 1
 set -w -g pane-base-index 1
+set -g renumber-windows on
+
+bind x kill-pane
 
 # Split panes with | and -
 bind | split-window -h
@@ -58,6 +58,17 @@ bind -r H resize-pane -L 5 # Resize left
 bind -r J resize-pane -D 5 # Resize down
 bind -r K resize-pane -U 5 # Resize up
 bind -r L resize-pane -R 5 # Resize right
+
+# Jump to window with Alt 1-9
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
 
 # Use TPM (Tmux Plugin Manager): https://github.com/tmux-plugins/tpm
 
@@ -77,9 +88,8 @@ set -g @catppuccin_window_text " #W" # window name
 set -g @catppuccin_window_current_text " #W" # window name
 set -g status-right-length 100
 set -g status-left-length 100
-set -g status-left ""
+set -g status-left "#{E:@catppuccin_status_session} "
 set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # Note: After first launch with TPM cloned, run `prefix + I` to install plugins
