--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,9 +3,10 @@
 
 # Font
 font-family = JetBrainsMono Nerd Font Mono
-font-size = 13
+font-size = 12.8
 
 # Use compatible TERM for remote hosts lacking xterm-ghostty terminfo
+# NOTE: Ubuntu 25.05+, Debian 13+ ship with ncurses >= 6.5-20241228
 term = xterm-256color
 
 # Set sudo wrapper to preserve terminfo.
